# 99problems-hs

./: .gitignore  99.cabal  Makefile  P01.hs  P02.hs  P03.hs  P04.hs  P05.hs  P06.hs  P07.hs  P08.hs  P09.hs  P10.hs  P11.hs  P12.hs  P14.hs  P15.hs  P16.hs  P17.hs  P18.hs  P19.hs  P20.hs  P21.hs  P22.hs  P23.hs  P99.cabal  P99.hs  README.txt  main.hs
Experimentation/: Main.hs  P01.hs  P02.hs  P03.hs  P04.hs  P05.hs  P06.hs  P07.hs  P08.hs  P09.hs  P10.hs  P11.hs  P12.hs  P14.hs  P15.hs  P16.hs  P17.hs  P18.hs  P19.hs  P20.hs  P21.hs  P22.hs  P23.hs
