name:                99problems-hs
version:             0.1.0.0
synopsis:            Haskell 99 problems exercises
homepage:            https://github.com/adarqui/99problems-hs
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-module:      P01, P02
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*

executable "99tests"
  main-is:             main.hs
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*
